--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,17 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.wangjj.template.MainActivity"
-            android:label="@string/app_name"
-            >
+            android:label="@string/app_name">
 
         </activity>
-        <activity android:name=".activity.md_support_library.ToolBarActivity"
-            >
+        <activity android:name=".activity.md_support_library.ToolBarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.md_support_library.SubActivity"/>
+        <activity android:name=".activity.md_support_library.SubActivity" />
     </application>
 
 </manifest>
