--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 15 09:07:20 CST 2016
-sdk.dir=D\:\\Android_SDK
+#Tue Mar 15 20:50:46 CST 2016
+sdk.dir=E\:\\C\\AndroidStudio\\AndroidSdk
