--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 16 09:57:34 CST 2016
-sdk.dir=D\:\\Android_SDK
+#Wed May 11 16:45:02 CST 2016
+sdk.dir=/Users/WangJJ/Library/Android/sdk
